apps/ghost/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ghost.d3vops.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ghost
            port:
              number: 80
